<resources>
    <string name="app_name">ResParking</string>
    <string name="title_activity_maps">ResParking</string>
    <string name="facebook_app_id">2151823018396409</string>
    <string name="fb_login_protocol_scheme">fb2151823018396409</string>
    <string name="error_login">Error al ingresar</string>
    <string name="error_login_firebase">Error al acceder a Firebase</string>
    //Reservacion add
    <string name="h_entrada">Entrada:</string>
    <string name="h_salida">Salida:</string>
    <string name="vehiculo">Vehiculo:</string>

    //Plaza add
    <string name="puesto">Numero Puesto</string>
    <string name="Tipo">Tipo Plaza</string>
    <string name="estado">Estado</string>
    <string name="mensaje">Reservaciones de Parqueo</string>

    <string name="guardar">Guardar</string>
    <string name="volver">Volver</string>
    <string name="btn_guardar">Aceptar</string>

    <string name="error_busqueda">Error en la busqueda</string>


    //Nombres de Informacion Pedido
    <string name="reservacion">Reservacion</string>
    <string name="btn_cerrar">Cerrar</string>
    <string name="btn_reservar">Reservar</string>

    <string name="entrada">Hora Entrada</string>
    <string name="salida">Hora Salida</string>

    //Snippet
    <string name="plaza">Plaza:</string>
    <string name="nombre_parqueo">Nombre Parqueadero:</string>
    <string name="external">Precio:</string>
    <string name="coordenadaX">Coordenada X:</string>
    <string name="coordenadaY">Coordenada Y:</string>
    <string name="pHora">Precio Hora:</string>
    <string name="nPlaza">Numero de Plazas:</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Login Administrador</string>
    <string name="action_settings1">Salir Administrador</string>
    <string name="action_eliminar">Eliminar Reservacion</string>
    <string name="action_modificar">Modificar Vehiculo</string>


    <string name="msg_no_busqueda">No se encontraron Datos</string>


</resources>
