<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:minHeight="00dp"
        android:minWidth="400dp"
        android:orientation="vertical"
        android:background="@drawable/background_button_login"
        android:padding="@dimen/fab_margin">

        <ImageView
            android:id="@+id/image"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:src="@drawable/placeholder"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:text="@string/nombre_parqueo"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/nombre_parqueo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:textColor="#000"
            android:textStyle="italic"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:text="@string/plaza"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/plaza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:textColor="#000"
            android:textStyle="italic"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill"
            android:text="@string/external"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>


        <TextView
            android:id="@+id/external"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:scrollbars="vertical"
            android:textColor="#000"
            android:textStyle="italic"/>


        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:id="@+id/botonera"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/dialogButtonCerrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/btn_cerrar"/>

            <Button
                android:id="@+id/dialogButtonEscoger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/btn_reservar"/>
        </LinearLayout>


    </LinearLayout>

</ScrollView>