<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParqueaderoAdd"
    android:background="@drawable/background_login">

  <Button
      android:id="@+id/btn_guardarPr"
      style="@style/Base.TextAppearance.AppCompat.Body1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/txt_nPlaza"
      android:layout_marginTop="24dp"
      android:background="@drawable/background_button_login"
      android:clickable="true"
      android:padding="16dp"
      android:text="Guardar"
      android:textAllCaps="false"
      android:textColor="#f16f7d" />

  <Button
      android:id="@+id/btn_volverPr"
      style="@style/Base.TextAppearance.AppCompat.Body1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:background="@drawable/background_button_volver"
      android:clickable="true"
      android:padding="16dp"
      android:text="Volver"
      android:textAllCaps="false"
      android:textColor="#fff"
      android:layout_below="@+id/btn_guardarPr"/>

    <TextView
        android:id="@+id/btn_coordenadaX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="90dp"
        android:layout_marginHorizontal="50dp"
        android:text="@string/coordenadaX"
        android:layout_alignParentLeft="true"
        android:textColor="#fff"/>


    <EditText
        android:id="@+id/txt_coordenadaX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_coordenadaX"
        android:layout_marginHorizontal="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:background="#fff"/>

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignTop="@+id/txt_coordenadaX"
      android:layout_marginHorizontal="20dp"
      android:src="@android:drawable/ic_menu_mylocation" />

    <TextView
        android:id="@+id/btn_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="50dp"
        android:text="@string/nombre_parqueo"
        android:layout_alignParentLeft="true"
        android:textColor="#fff"/>



    <EditText
        android:id="@+id/txt_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_nombre"
        android:layout_marginHorizontal="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:background="#fff"/>

  <ImageView
      android:layout_width="24dp"
      android:layout_height="23dp"
      android:layout_alignTop="@+id/txt_nombre"
      android:layout_marginHorizontal="20dp"
      android:src="@drawable/com_facebook_profile_picture_blank_portrait" />

    <TextView
        android:id="@+id/btn_coordenadaY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="150dp"
        android:layout_marginHorizontal="50dp"
        android:text="@string/coordenadaY"
        android:layout_alignParentLeft="true"
        android:textColor="#fff"/>


    <EditText
        android:id="@+id/txt_coordenadaY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_coordenadaY"
        android:layout_marginHorizontal="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:background="#fff"/>

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignTop="@+id/txt_coordenadaY"
      android:layout_marginHorizontal="20dp"
      android:src="@android:drawable/ic_menu_mylocation" />

    <TextView
        android:id="@+id/btn_pHora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="210dp"
        android:layout_marginHorizontal="50dp"
        android:text="@string/pHora"
        android:layout_alignParentLeft="true"
        android:textColor="#fff"/>


    <EditText
        android:id="@+id/txt_pHora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_pHora"
        android:layout_marginHorizontal="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:background="#fff"/>

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignTop="@+id/txt_pHora"
      android:layout_marginHorizontal="20dp"
      android:src="@android:drawable/ic_menu_info_details" />

  <TextView
      android:id="@+id/btn_nPlaza"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:layout_marginTop="280dp"
      android:layout_marginHorizontal="50dp"
      android:text="@string/nPlaza"
      android:layout_alignParentLeft="true"
      android:textColor="#fff"/>


  <EditText
      android:id="@+id/txt_nPlaza"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/btn_nPlaza"
      android:layout_marginHorizontal="50dp"
      android:ems="10"
      android:inputType="textPersonName"
      android:background="#fff"/>

  <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignTop="@+id/txt_nPlaza"
      android:layout_marginHorizontal="20dp"
      android:src="@android:drawable/ic_menu_info_details" />

</RelativeLayout>
